loadbalancer-staging.yaml
apiVersion: v1
kind: Service
metadata:
  name: tic-tac-toe-loadbalancer
  namespace: staging
spec:
  type: LoadBalancer
  selector:
    app: tic-tac-toe
  ports:
  - port: 80
    targetPort: 80
