simple-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tic-tac-toe-apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /staging(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: tic-tac-toe
            namespace: staging
            port:
              number: 80
      - path: /production(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: tic-tac-toe
            namespace: production
            port:
              number: 80
